* Cucumber 0.2 runs about X times faster than Cucumber 0.1.16
* Cucumber 0.2 is about 2/3 the size of Cucumber 0.1.16, and it is 2-3 times faster to install (less RDoc/Ri).

=== Existing features that don't work yet:
* --exclude
* --dry-run
* --scenario
* snippets
* Several disabled specs should be fixed or removed
* Make all selftest features pass

== Bugfixes
* TODO Autotest uses file:line instead of --scenario (current impl doesn't work on Windows)

=== New features
* TODO: Run cucumber --language LANG with no args to see keywords.
* TODO: "Background" section
* TODO: --tags
* Multiline arguments (tables and """ strings) are printed in the output
* It's no longer necessary to compile the Treetop grammar when adding a new language. Localised parser is generated at runtime.

=== Removed features
* "GivenScenario" is gone. Instead you can use "Background" or call Steps from Steps.
* "More Examples" is gone. "Scenario" + "More Examples" is no longer supported. Use "Scenario Outline" + "Examples" instead.
* Pure Ruby features are no longer supported

== Git (master)

=== New features

* Finnish translation (Tero Tilus)
* Use Webrat's #contain matcher in generated "I should (not) see" step definitions

== 0.1.16 2009-01-19

This is a small bugfix release. The most notable improvement is compatibility with Webrat 0.4. Rails/Webrat users should
upgrade both Cucumber and Webrat gems.

=== New features
* Allow argument placeholders in step tables and multiline comments (#121 Joseph Wilk)
* Scenario Outline can be followed by several named Examples sections (#123 Aslak Hellesøy)
* Add the #binary= method back to the Rake task. It is needed by merb_cucumber for running the features of a merb app with it's bundled gems. (Thomas Marek)
* Added a /^When I go to (.+)$/ step definition to webrat_steps.rb and a simple page name to path mapping method (Bryan Helmkamp)

=== Bugfixes